samples/_failures_safe/1761272012_dcc80f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6bc877be.c: In function ‘display_results’:
./samples/SAFE/__tmp_6bc877be.c:161:9: error: expected identifier or ‘(’ at end of input
  161 |         double
      |         ^~~~~~
./samples/SAFE/__tmp_6bc877be.c:161:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6bc877be.c:161:9: error: expected declaration or statement at end of input
